--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-29  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated
+
 2007-10-28  Mohammad DAMT  <mdamt@mnots.eu>
 
 	* id.po: Updated Indonesian translation by Huda Toriq <hudatoriq at
