--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-31  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2007-10-29  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated
