--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-06  Jorge Gonzalez <jorgegonz@svn.gnome.org>   
+
+        * es.po: Updated Spanish translation
+
 2007-11-06  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
 
 	* be@latin.po: Updated Belarusian Latin translation.
