Handle RTL layout of icons (#342009) Patch from Yair Hershkovitz
2007-11-12  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-canvas-item.c:
        * libnautilus-private/nautilus-icon-container.c:
        * libnautilus-private/nautilus-icon-container.h:
        * libnautilus-private/nautilus-icon-dnd.c:
        * libnautilus-private/nautilus-icon-private.h:
        * src/file-manager/fm-desktop-icon-view.c:
        * src/file-manager/fm-icon-view.c:
	Handle RTL layout of icons (#342009)
	Patch from Yair Hershkovitz


svn path=/trunk/; revision=13413

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2007-11-12  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-icon-canvas-item.c:
+        * libnautilus-private/nautilus-icon-container.c:
+        * libnautilus-private/nautilus-icon-container.h:
+        * libnautilus-private/nautilus-icon-dnd.c:
+        * libnautilus-private/nautilus-icon-private.h:
+        * src/file-manager/fm-desktop-icon-view.c:
+        * src/file-manager/fm-icon-view.c:
+	Handle RTL layout of icons (#342009)
+	Patch from Yair Hershkovitz
+
 2007-11-05  Jürg Billeter  <j@bitron.ch>
 
 	reviewed by: Alexander Larsson  <alexl@redhat.com>
