Translation updated by Ivar Smolin.
2007-11-15  Priit Laes  <plaes@svn.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

svn path=/branches/gnome-2-20/; revision=13420

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-15  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2007-10-28  Mohammad DAMT  <mdamt@mnots.eu>
 
 	* id.po: Update Indonesian translation by Huda Toriq <hudatoriq at 
