--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-15  Priit Laes  <plaes@svn.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2007-11-12  Matej Urbančič <mateju@svn.gnome.org>
 
 	* sl.po: Updated Slovenian translation.
