Updated Occitan translation
svn path=/trunk/; revision=13430

--- a/po/oc.po
+++ b/po/oc.po
@@ -1,20 +1,23 @@
+# translation of oc.po to Occitan
 # Occitan translation of nautilus.
 # Copyright (C) 2007 Free Software Foundation, Inc.
 # This file is distributed under the same license as the nautilus package.
+#
 # Yannig MARCHEGAY (Kokoyaya) <yannig@marchegay.org>, 2007.
-# 
+# Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus.HEAD\n"
+"Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-14 11:21+0200\n"
-"PO-Revision-Date: 2007-10-14 11:26+0200\n"
+"PO-Revision-Date: 2007-11-20 14:32+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
-"Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
+"Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);"
+"X-Generator: KBabel 1.11.4\n"
 
 #: ../data/browser.xml.h:1
 msgid "Apparition"
@@ -452,8 +455,7 @@ msgid ""
 msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:37
-msgid ""
-"If set to true, newly opened windows will have the location bar visible."
+msgid "If set to true, newly opened windows will have the location bar visible."
 msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:38
@@ -579,8 +581,7 @@ msgid "If true, icons will be laid out tighter by default in new windows."
 msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:59
-msgid ""
-"If true, labels will be placed beside icons rather than underneath them."
+msgid "If true, labels will be placed beside icons rather than underneath them."
 msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:60
@@ -1065,8 +1066,7 @@ msgid "Sorry, but you must specify a non-blank keyword for the new emblem."
 msgstr ""
 
 #: ../libnautilus-private/nautilus-emblem-utils.c:204
-msgid ""
-"Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
 msgstr ""
 
 #. this really should never happen, as a user has no idea
@@ -1332,8 +1332,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:1197
 #, c-format
-msgid ""
-"The file already exists in \"%s\".  Replacing it will overwrite its contents."
+msgid "The file already exists in \"%s\".  Replacing it will overwrite its contents."
 msgstr ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:1214
@@ -1905,21 +1904,21 @@ msgstr ""
 msgid "%u item"
 msgid_plural "%u items"
 msgstr[0] "%u element"
-msgstr[1] "%u elements"
+msgstr[1] "%u element"
 
 #: ../libnautilus-private/nautilus-file.c:4346
 #, c-format
 msgid "%u folder"
 msgid_plural "%u folders"
 msgstr[0] "%u repertòri"
-msgstr[1] "%u repertòris"
+msgstr[1] "%u repertòri"
 
 #: ../libnautilus-private/nautilus-file.c:4347
 #, c-format
 msgid "%u file"
 msgid_plural "%u files"
 msgstr[0] "%u fichièr"
-msgstr[1] "%u fichièrs"
+msgstr[1] "%u fichièr"
 
 #. FIXME: We should use GNOME_VFS_SIZE_FORMAT_STR instead of the explicit format here.
 #: ../libnautilus-private/nautilus-file.c:4425
@@ -2271,8 +2270,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:611
 #: ../src/nautilus-window-manage-views.c:1538
-msgid ""
-"Check that the spelling is correct and that your proxy settings are correct."
+msgid "Check that the spelling is correct and that your proxy settings are correct."
 msgstr ""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:616
@@ -2301,7 +2299,7 @@ msgstr "Impossible de trobar \"%s\"."
 msgid "Opening %d Item"
 msgid_plural "Opening %d Items"
 msgstr[0] "Dobertura de %d element"
-msgstr[1] "Dobertura de %d elements"
+msgstr[1] "Dobertura de %d element"
 
 #: ../libnautilus-private/nautilus-program-choosing.c:899
 msgid "Sorry, but you can't execute commands from a remote site."
@@ -2322,8 +2320,7 @@ msgid "This drop target only supports local files."
 msgstr ""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:943
-msgid ""
-"To open non-local files copy them to a local folder and then drop them again."
+msgid "To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 
 #: ../libnautilus-private/nautilus-program-choosing.c:954
@@ -2360,8 +2357,7 @@ msgstr ""
 
 #. label, accelerator
 #: ../nautilus-computer.desktop.in.in.h:1 ../src/nautilus-window-menus.c:658
-msgid ""
-"Browse all local and remote disks and folders accessible from this computer"
+msgid "Browse all local and remote disks and folders accessible from this computer"
 msgstr ""
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:1
@@ -2451,8 +2447,7 @@ msgstr "Modificar lo _fons del burèu"
 
 #. tooltip
 #: ../src/file-manager/fm-desktop-icon-view.c:701
-msgid ""
-"Show a window that lets you set your desktop background's pattern or color"
+msgid "Show a window that lets you set your desktop background's pattern or color"
 msgstr ""
 
 #. tooltip
@@ -2507,7 +2502,8 @@ msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:1006
 #, c-format
-msgid "Are you sure you want to permanently delete the %d selected item?"
+msgid ""
+"Are you sure you want to permanently delete the %d selected item?"
 "Are you sure you want to permanently delete the %d selected items?"
 msgstr "Sètz segur que volètz suprimir per totjorn lo %d element seleccionat ?"
 
@@ -2623,8 +2619,7 @@ msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:3841
 msgid "Cannot move file to trash, do you want to delete immediately?"
-msgstr ""
-"Impossible de desplaçar lo fichièr cap a la banasta, lo volètz suprimir ara ?"
+msgstr "Impossible de desplaçar lo fichièr cap a la banasta, lo volètz suprimir ara ?"
 
 #: ../src/file-manager/fm-directory-view.c:3842
 #, c-format
@@ -2643,8 +2638,7 @@ msgid "The selected item could not be moved to the Trash"
 msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:3852
-msgid ""
-"Cannot move some items to trash, do you want to delete these immediately?"
+msgid "Cannot move some items to trash, do you want to delete these immediately?"
 msgstr ""
 "Impossible de desplaçar d'elements dins la banasta, los volètz suprimir "
 "sulcòp ?"
@@ -2784,13 +2778,15 @@ msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:6116
 #, c-format
-msgid "The %d selected item will be moved if you select the Paste command"
+msgid ""
+"The %d selected item will be moved if you select the Paste command"
 "The %d selected items will be moved if you select the Paste command"
 msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:6123
 #, c-format
-msgid "The %d selected item will be copied if you select the Paste command"
+msgid ""
+"The %d selected item will be copied if you select the Paste command"
 "The %d selected items will be copied if you select the Paste command"
 msgstr ""
 
@@ -3219,7 +3215,7 @@ msgstr "_Dobrir amb \"%s\""
 msgid "Open in %d New Window"
 msgid_plural "Open in %d New Windows"
 msgstr[0] "Dobrir dins %d fenèstra novèla"
-msgstr[1] "Dobrir dins %d fenèstras novèlas"
+msgstr[1] "Dobrir dins %d fenèstra novèla"
 
 #: ../src/file-manager/fm-directory-view.c:7838
 msgid "Delete all selected items permanently"
@@ -3254,7 +3250,7 @@ msgstr "Dobertura de \"%s\""
 msgid "Opening %d item."
 msgid_plural "Opening %d items."
 msgstr[0] "Dobertura de %d element."
-msgstr[1] "Dobertura de %d elements."
+msgstr[1] "Dobertura de %d element."
 
 #: ../src/file-manager/fm-directory-view.c:9777
 msgid "Download location?"
@@ -3316,8 +3312,7 @@ msgstr ""
 
 #: ../src/file-manager/fm-error-reporting.c:60
 #, c-format
-msgid ""
-"You do not have the permissions necessary to view the contents of \"%s\"."
+msgid "You do not have the permissions necessary to view the contents of \"%s\"."
 msgstr ""
 
 #: ../src/file-manager/fm-error-reporting.c:64
@@ -3336,14 +3331,12 @@ msgstr ""
 
 #: ../src/file-manager/fm-error-reporting.c:108
 #, c-format
-msgid ""
-"The name \"%s\" is already used in this folder. Please use a different name."
+msgid "The name \"%s\" is already used in this folder. Please use a different name."
 msgstr ""
 
 #: ../src/file-manager/fm-error-reporting.c:113
 #, c-format
-msgid ""
-"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
 msgstr ""
 
 #: ../src/file-manager/fm-error-reporting.c:118
@@ -3379,8 +3372,7 @@ msgstr ""
 
 #: ../src/file-manager/fm-error-reporting.c:169
 #, c-format
-msgid ""
-"You do not have the permissions necessary to change the group of \"%s\"."
+msgid "You do not have the permissions necessary to change the group of \"%s\"."
 msgstr ""
 
 #: ../src/file-manager/fm-error-reporting.c:173
@@ -3413,8 +3405,7 @@ msgstr "Impossible de cambiar lo propietari."
 
 #: ../src/file-manager/fm-error-reporting.c:239
 #, c-format
-msgid ""
-"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
 msgstr ""
 
 #: ../src/file-manager/fm-error-reporting.c:246
@@ -3751,7 +3742,7 @@ msgstr "Basic"
 msgid "_Name:"
 msgid_plural "_Names:"
 msgstr[0] "_Nom :"
-msgstr[1] "_Noms :"
+msgstr[1] "_Nom :"
 
 #: ../src/file-manager/fm-properties-window.c:3057
 msgid "Type:"
@@ -4054,8 +4045,7 @@ msgstr ""
 
 #: ../src/nautilus-application.c:364
 msgid "A link called \"Link To Old Desktop\" has been created on the desktop."
-msgstr ""
-"Un ligam apelat \"Ligam cap al burèu ancien\" es estat creat sul burèu."
+msgstr "Un ligam apelat \"Ligam cap al burèu ancien\" es estat creat sul burèu."
 
 #: ../src/nautilus-application.c:365
 msgid ""
@@ -4214,8 +4204,7 @@ msgstr ""
 #: ../src/nautilus-connect-server-dialog.c:200
 #, c-format
 msgid "Can't Connect to Server. \"%s\" is not a valid location."
-msgstr ""
-"Impossible de se connectar al servidor. \"%s\" es pas un emplaçament valid."
+msgstr "Impossible de se connectar al servidor. \"%s\" es pas un emplaçament valid."
 
 #: ../src/nautilus-connect-server-dialog.c:216
 msgid "Can't Connect to Server. You must enter a name for the server."
@@ -4697,14 +4686,14 @@ msgstr ""
 msgid "<b>Width:</b> %d pixel\n"
 msgid_plural "<b>Width:</b> %d pixels\n"
 msgstr[0] "<b>Largor :</b> %d pixel\n"
-msgstr[1] "<b>Largor :</b> %d pixels\n"
+msgstr[1] "<b>Largor :</b> %d pixel\n"
 
 #: ../src/nautilus-image-properties-page.c:332
 #, c-format
 msgid "<b>Height:</b> %d pixel\n"
 msgid_plural "<b>Height:</b> %d pixels\n"
 msgstr[0] "<b>Nautor :</b> %d pixel\n"
-msgstr[1] "<b>Nautor :</b> %d pixels\n"
+msgstr[1] "<b>Nautor :</b> %d pixel\n"
 
 #: ../src/nautilus-image-properties-page.c:350
 msgid "Failed to load image information"
@@ -4712,7 +4701,7 @@ msgstr ""
 
 #: ../src/nautilus-image-properties-page.c:525
 msgid "loading..."
-msgstr ""
+msgstr "cargament..."
 
 #: ../src/nautilus-image-properties-page.c:591
 msgid "Image"
