--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-21  Gil Forcada  <gforcada@svn.gnome.org>
+
+	* ca.po: Updated Catalan translation by David Planella.
+
 2007-11-15  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
