Updated Russian translation by Vasiliy Faronov <qvvx@yandex.ru>
2007-11-25  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

        * ru.po: Updated Russian translation
        by Vasiliy Faronov <qvvx@yandex.ru>


svn path=/trunk/; revision=13452

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-25  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+        * ru.po: Updated Russian translation
+        by Vasiliy Faronov <qvvx@yandex.ru>
+
 2007-11-21  Gil Forcada  <gforcada@svn.gnome.org>
 
 	* ca.po: Updated Catalan translation by David Planella.
