--- a/po/ru.po
+++ b/po/ru.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: nautilus trunk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-16 01:33+0400\n"
-"PO-Revision-Date: 2007-09-16 14:27+0200\n"
-"Last-Translator: Nickolay V. Shmyrev  <nshmyrev@yandex.ru>\n"
+"PO-Revision-Date: 2007-11-25 21:25+0300\n"
+"Last-Translator: Vasiliy Faronov <qvvx@yandex.ru>\n"
 "Language-Team: Russian <gnome-cyr@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1069,7 +1069,7 @@ msgstr "Тип файла."
 #: ../libnautilus-private/nautilus-column-utilities.c:65
 #: ../src/nautilus-image-properties-page.c:245
 msgid "Date Modified"
-msgstr "Дата модификации"
+msgstr "Дата изменения"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:66
 msgid "The date the file was modified."
@@ -1170,7 +1170,7 @@ msgstr "Пере_местить сюда"
 
 #: ../libnautilus-private/nautilus-dnd.c:624
 msgid "_Copy Here"
-msgstr "_Копировать сюда"
+msgstr "С_копировать сюда"
 
 #: ../libnautilus-private/nautilus-dnd.c:629
 msgid "_Link Here"
@@ -2258,7 +2258,7 @@ msgstr "показывать _файлы при щелчке на них"
 #: ../libnautilus-private/nautilus-global-preferences.c:129
 #: ../src/nautilus-file-management-properties.glade.h:63
 msgid "_Ask each time"
-msgstr "каждый раз спр_ашивать"
+msgstr "Каждый раз спр_ашивать"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:137
 msgid "Search for files by file name only"
@@ -3483,9 +3483,9 @@ msgstr "Открыть в новом окне"
 #: ../src/file-manager/fm-directory-view.c:7817
 msgid "_Browse Folder"
 msgid_plural "_Browse Folders"
-msgstr[0] "_Просмотреть папку"
-msgstr[1] "_Просмотреть папки"
-msgstr[2] "_Просмотреть папки"
+msgstr[0] "Открыть _папку в обозревателе"
+msgstr[1] "Открыть _папки в обозревателе"
+msgstr[2] "Открыть _папки в обозревателе"
 
 #: ../src/file-manager/fm-directory-view.c:7653
 #: ../src/file-manager/fm-directory-view.c:7837
@@ -3824,7 +3824,7 @@ msgstr ""
 #. name, stock id
 #: ../src/file-manager/fm-icon-view.c:1456
 msgid "Compact _Layout"
-msgstr "_уплотнённо"
+msgstr "_Уплотнённо"
 
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1457
@@ -4192,7 +4192,7 @@ msgstr "Нет"
 
 #: ../src/file-manager/fm-properties-window.c:3967
 msgid "List files only"
-msgstr "Только список файлов"
+msgstr "Только перечисление файлов"
 
 #: ../src/file-manager/fm-properties-window.c:3969
 msgid "Access files"
@@ -4311,7 +4311,7 @@ msgstr "Создается окно свойств."
 
 #: ../src/file-manager/fm-properties-window.c:5404
 msgid "Select Custom Icon"
-msgstr "_Выбрать другой значок"
+msgstr "Выбрать другой значок"
 
 #: ../src/file-manager/fm-tree-view.c:812
 msgid "E_ject"
@@ -4812,16 +4812,16 @@ msgid ""
 "Never"
 msgstr ""
 "Всегда\n"
-"Только локальные файлы\n"
+"Только для локальных файлов\n"
 "Никогда"
 
 #: ../src/nautilus-file-management-properties.glade.h:35
 msgid "Always open in _browser windows"
-msgstr "Всегда открывать каталоги в _обозревателе"
+msgstr "Всегда открывать папки в _обозревателе"
 
 #: ../src/nautilus-file-management-properties.glade.h:36
 msgid "Ask before _emptying the Trash or deleting files"
-msgstr "Запрашивать подтверждение о_чистки корзины или удаление файлов"
+msgstr "Спрашивать перед о_чисткой корзины и удалением файлов"
 
 #: ../src/nautilus-file-management-properties.glade.h:37
 msgid "Behavior"
@@ -4868,7 +4868,7 @@ msgstr "Отображение"
 
 #: ../src/nautilus-file-management-properties.glade.h:48
 msgid "File Management Preferences"
-msgstr "Настройки управления файлами"
+msgstr "Параметры управления файлами"
 
 #: ../src/nautilus-file-management-properties.glade.h:49
 msgid "I_nclude a Delete command that bypasses Trash"
@@ -4884,11 +4884,11 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:52
 msgid "List Columns"
-msgstr "Список столбцов"
+msgstr "Столбцы списка"
 
 #: ../src/nautilus-file-management-properties.glade.h:53
 msgid "Preview"
-msgstr "Образец"
+msgstr "Образцы"
 
 #: ../src/nautilus-file-management-properties.glade.h:54
 msgid "Preview _sound files:"
@@ -4944,7 +4944,7 @@ msgstr "То_лько для файлов, меньших чем:"
 
 #: ../src/nautilus-file-management-properties.glade.h:68
 msgid "_Run executable text files when they are opened"
-msgstr "В_ыполнять файлы, когда на них щелкнут"
+msgstr "_Запускать исполняемые текстовые файлы при открытии"
 
 #: ../src/nautilus-file-management-properties.glade.h:69
 msgid "_Single click to open items"
@@ -4960,7 +4960,7 @@ msgstr "Использовать плотное разме_щение"
 
 #: ../src/nautilus-file-management-properties.glade.h:72
 msgid "_View executable text files when they are opened"
-msgstr "П_росматривать файлы, когда на них щелкнут"
+msgstr "П_росматривать исполняемые текстовые файлы при открытии"
 
 #: ../src/nautilus-first-time-druid.c:40
 msgid ""
@@ -5407,7 +5407,7 @@ msgstr "Вперед по истории"
 
 #: ../src/nautilus-navigation-window-menus.c:548
 msgid "_Search"
-msgstr "_Поиск"
+msgstr "_Искать"
 
 #: ../src/nautilus-navigation-window.c:187
 msgid "Toggle between button and text-based location bar"
@@ -5729,7 +5729,7 @@ msgstr "Результаты поиска"
 
 #: ../src/nautilus-search-bar.c:141
 msgid "Search:"
-msgstr "Поиск:"
+msgstr "Искать:"
 
 #: ../src/nautilus-side-pane.c:420
 msgid "Close the side pane"
@@ -5737,7 +5737,7 @@ msgstr "Закрыть боковую панель"
 
 #: ../src/nautilus-spatial-window.c:866
 msgid "_Places"
-msgstr "_Места"
+msgstr "Пере_ход"
 
 #. name, stock id, label
 #: ../src/nautilus-spatial-window.c:867
