Updated Irish translation.
2007-11-25  Seán de Búrca  <leftmostcat@svn.gnome.org>

    * ga.po: Updated Irish translation.

svn path=/branches/gnome-2-20/; revision=13453

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-25  Seán de Búrca  <leftmostcat@svn.gnome.org>
+
+	* ga.po: Updated Irish translation.
+
 2007-11-21  Gil Forcada  <gforcada@svn.gnome.org>
 
 	* ca.po: Updated Catalan translation by David Planella.
