Updated Belarusian Latin translation.
svn path=/branches/gnome-2-20/; revision=13454

--- a/po/be@latin.po
+++ b/po/be@latin.po
@@ -2554,7 +2554,7 @@ msgstr "Chatni kataloh"
 #. label, accelerator
 #: ../nautilus-home.desktop.in.in.h:2 ../src/nautilus-window-menus.c:654
 msgid "Open your personal folder"
-msgstr "Adčyniaje tvaju pryvatny kataloh"
+msgstr "Adčyniaje tvoj pryvatny kataloh"
 
 #: ../nautilus.desktop.in.in.h:1
 msgid "Browse the file system with the file manager"
