--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-27  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
+
+	* be@latin.po: Updated Belarusian Latin translation.
+
 2007-11-25  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
 
         * ru.po: Updated Russian translation
