--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-27  Andre Klapper  <a9016009@gmx.de>
+
+	* configure.in:
+	add "sys/param.h" to AC_CHECK_HEADERS() to fix NetBSD build.
+	Fixes bug #496266.
+
 2007-11-12  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-icon-canvas-item.c:
