Use invisible event box for search bar. (#464193) Patch from Andrea
2007-11-28  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-search-bar.c:
	Use invisible event box for search bar. (#464193)
	Patch from Andrea Cimitan


svn path=/trunk/; revision=13458

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-28  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-search-bar.c:
+	Use invisible event box for search bar. (#464193)
+	Patch from Andrea Cimitan
+
 2007-11-27  Andre Klapper  <a9016009@gmx.de>
 
 	* configure.in:
