Fix bgo354688 - Capitalization in the file properties dialog 2007-11-30  Federico Mena Quintero  <federico@novell.com>
	Fix http://bugzilla.gnome.org/show_bug.cgi?id=354688 - Attack of
	the HIG police.

	* src/file-manager/fm-properties-window.c
	(create_permissions_page): Use header capitalization for command button.
	(add_permissions_combo_box): Use sentence capitalization for field labels.

Signed-off-by: Federico Mena Quintero <federico@gnu.org>

svn path=/trunk/; revision=13466

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-30  Federico Mena Quintero  <federico@novell.com>
+
+	Fix http://bugzilla.gnome.org/show_bug.cgi?id=354688 - Attack of
+	the HIG police.
+
+	* src/file-manager/fm-properties-window.c
+	(create_permissions_page): Use header capitalization for command button.
+	(add_permissions_combo_box): Use sentence capitalization for field labels.
+
 2007-11-30  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.[ch]:
