Update list of files.
2007-11-30  Andre Klapper  <a9016009@gmx.de>

	* POTFILES.in: Update list of files.


svn path=/trunk/; revision=13467

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-30  Andre Klapper  <a9016009@gmx.de>
+
+	* POTFILES.in: Update list of files.
+
 2007-11-27  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
 
 	* be@latin.po: Updated Belarusian Latin translation.
