Updated Slovenian translation
svn path=/trunk/; revision=13468

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-01  Urbančič Matej <mateju@svn.gnome.org>
+
+	* sl.po: Updated Slovenian translation.
+
 2007-11-30  Andre Klapper  <a9016009@gmx.de>
 
 	* POTFILES.in: Update list of files.
