--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-01  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+        * es.po: Updated Spanish translation
+
 2007-12-01  Urbančič Matej <mateju@svn.gnome.org>
 
 	* sl.po: Updated Slovenian translation.
