Fix ngettext use and othe i18n issues (#500945)
2007-12-03  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-progress-info.c:
        * src/file-manager/fm-error-reporting.c:
	Fix ngettext use and othe i18n issues (#500945)


svn path=/trunk/; revision=13470

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-03  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+        * libnautilus-private/nautilus-file.c:
+        * libnautilus-private/nautilus-progress-info.c:
+        * src/file-manager/fm-error-reporting.c:
+	Fix ngettext use and othe i18n issues (#500945)
+
 2007-11-30  Federico Mena Quintero  <federico@novell.com>
 
 	Fix http://bugzilla.gnome.org/show_bug.cgi?id=354688 - Attack of
