--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-12-03  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-search-engine-tracker.c:
+	Fix build
+	
+        * src/file-manager/fm-directory-view.h:
+	Don't include deprectated headers
+
+2007-12-03  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.c:
         * libnautilus-private/nautilus-file.c:
         * libnautilus-private/nautilus-progress-info.c:
