Don't include deprectated headers
2007-12-03  Alexander Larsson  <alexl@redhat.com>

	* test/test.h: 
	Don't include deprectated headers



svn path=/trunk/; revision=13472

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-03  Alexander Larsson  <alexl@redhat.com>
 
+	* test/test.h: 
+	Don't include deprectated headers
+
+2007-12-03  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-search-engine-tracker.c:
 	Fix build
 	
