Implement cancellation in all ops
2007-12-03  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Implement cancellation in all ops
	
        * libnautilus-private/nautilus-progress-info.[ch]:
	Allow cancelling in progress dialog


svn path=/trunk/; revision=13474

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-12-03  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-operations.c:
+	Implement cancellation in all ops
+	
+        * libnautilus-private/nautilus-progress-info.[ch]:
+	Allow cancelling in progress dialog
+
+2007-12-03  Alexander Larsson  <alexl@redhat.com>
+
 	* test/test.h: 
 	Don't include deprectated headers
 
