Remove old gnome-vfs base implementation to make this easier to read.
2007-12-03  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Remove old gnome-vfs base implementation to make
	this easier to read.


svn path=/trunk/; revision=13476

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2007-12-03  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
+	Remove old gnome-vfs base implementation to make
+	this easier to read.
+	
+2007-12-03  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
 	Implement cancellation in all ops
 	
         * libnautilus-private/nautilus-progress-info.[ch]:
