--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-04  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+	Use CommonJob in the delete confirmation dialogs
+
 2007-12-03  Christian Persch  <chpe@gnome.org>
 
 	* libnautilus-private/nautilus-directory-metafile.c:
