--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2007-12-04  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
+	Support recursive delete with progress reporting
+
+2007-12-04  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
 	Use CommonJob in the delete confirmation dialogs
 
 2007-12-03  Christian Persch  <chpe@gnome.org>
