Updated German translation.
2007-12-04  Andre Klapper  <a9016009@gmx.de>

	* de.po: Updated German translation.


svn path=/trunk/; revision=13482

--- a/po/de.po
+++ b/po/de.po
@@ -38,7 +38,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-12-03 17:37+0100\n"
+"POT-Creation-Date: 2007-12-04 13:05+0100\n"
 "PO-Revision-Date: 2007-12-02 13:53+0100\n"
 "Last-Translator: Andre Klapper <ak-47@gmx.net>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
@@ -1715,7 +1715,7 @@ msgstr "%S von %S"
 #.
 #: ../libnautilus-private/nautilus-file-operations.c:2041
 msgid "%S of %S — %T left (%S/sec)"
-msgstr "%S von %S — noch %T benötigt (%S/Sekunde)"
+msgstr "%S von %S — noch %T ausstehend (%S/Sekunde)"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2166
 msgid ""
@@ -2528,7 +2528,7 @@ msgstr "Wählen Sie eine Anwendung, um sich deren Beschreibung anzuschauen."
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:803
 msgid "_Use a custom command"
-msgstr "_Benutzerdefinierten Befehel benutzen"
+msgstr "_Benutzerdefinierten Befehl benutzen"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:820
 msgid "_Browse..."
@@ -3159,7 +3159,7 @@ msgstr "Jedes gewählte Objekt in einem einzelnen Navigationsfenster öffnen"
 #: ../src/file-manager/fm-directory-view.c:6172
 #: ../src/file-manager/fm-directory-view.c:6301
 msgid "Open in Folder Window"
-msgstr "In Ornderfenster öffnen"
+msgstr "In Ordnerfenster öffnen"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6173
