--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-04  Andre Klapper  <a9016009@gmx.de>
+
+	* de.po: Updated German translation.
+
 2007-12-03  Andre Klapper  <a9016009@gmx.de>
 
 	* de.po: Updated German translation.
