--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-04 Kevin Kubasik <kevin@kubasik.net>
+ 	* libnautilus-private/nautilus-search-engine-beagle.c:
+ 	Replace depreciated beagle_query_add_hit_type and
+ 	beagle_query_add_mime_type with compatible query strings.
+
 2007-11-27  Andre Klapper  <a9016009@gmx.de>
 
 	* configure.in:
