--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-04 Kevin Kubasik <kevin@kubasik.net>
+	* libnautilus-private/nautilus-search-engine-beagle.c:
+	Replace depreciated beagle_query_add_hit_type and
+	beagle_query_add_mime_type with compatible query strings.
+	
 2007-12-04  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
