Fix a memory leak from the last commit.
2007-12-04 Kevin Kubasik <kevin@kubasik.net>
	* libnautilus-private/nautilus-search-engine-beagle.c:
	Fix a memory leak from the last commit.

svn path=/branches/gnome-2-20/; revision=13486

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2007-12-04 Kevin Kubasik <kevin@kubasik.net>
+	* libnautilus-private/nautilus-search-engine-beagle.c:
+	Fix a memory leak from the last commit.
+
+2007-12-04 Kevin Kubasik <kevin@kubasik.net>
  	* libnautilus-private/nautilus-search-engine-beagle.c:
  	Replace depreciated beagle_query_add_hit_type and
  	beagle_query_add_mime_type with compatible query strings.
