--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-04 Kevin Kubasik <kevin@kubasik.net>
+	* libnautilus-private/nautilus-search-engine-beagle.c:
+	Fix a memory leak from the last commit.
+
 2007-12-04  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
