Fixed some spacing issues.
2007-12-04 Kevin Kubasik <kevin@kubasik.net>
	* libnautilus-private/nautilus-search-engine-beagle.c:
	Fixed some spacing issues.


svn path=/branches/gnome-2-20/; revision=13491

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-04 Kevin Kubasik <kevin@kubasik.net>
 	* libnautilus-private/nautilus-search-engine-beagle.c:
+	Fixed some spacing issues.
+
+2007-12-04 Kevin Kubasik <kevin@kubasik.net>
+	* libnautilus-private/nautilus-search-engine-beagle.c:
 	Fix a memory leak from the last commit.
 
 2007-12-04 Kevin Kubasik <kevin@kubasik.net>
